java 16 sonarqube fix